--- a/assets/CSS/scss/main.scss
+++ b/assets/CSS/scss/main.scss
@@ -1,3 +1,5 @@
+@import "./consts.scss";
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -6,7 +8,7 @@ body {
 }
 
 header {
-  background-color: #082431;
+  background-color: $main-color;
 }
 
 main {
@@ -14,6 +16,7 @@ main {
 }
 
 footer {
-  color: darkgrey;
-  background-color: #0a2e3f;
-}/*# sourceMappingURL=style.css.map */
+  color: $text-color-secondary;
+  background-color: $main-color-light;
+}
+
