--- a/assets/CSS/scss/roleplay.scss
+++ b/assets/CSS/scss/roleplay.scss
@@ -1,2 +1,16 @@
 @import "./consts.scss";
 @import "./main.css";
+
+.article-emphasis {
+  margin-bottom: 1.5em;
+}
+
+.types-title {
+  .lettrine {
+    float: none;
+  }
+  text-align: center;
+  margin-top: 2em;
+  padding-top: 1em;
+  margin-bottom: 1.5em;
+}
