--- a/assets/CSS/scss/activities.scss
+++ b/assets/CSS/scss/activities.scss
@@ -1,2 +1,11 @@
 @import "./consts.scss";
 @import "./main.css";
+
+h5 .lettrine {
+  float: none;
+}
+
+.card-header {
+  background: none;
+  color: $main-color-light;
+}
