--- a/assets/CSS/contacts.css
+++ b/assets/CSS/contacts.css
@@ -1,1 +1,4 @@
-@import "./main.css";/*# sourceMappingURL=contacts.css.map */
+@import "./main.css";
+h5 .lettrine {
+  float: none;
+}/*# sourceMappingURL=contacts.css.map */
