--- a/assets/CSS/index.css
+++ b/assets/CSS/index.css
@@ -6,4 +6,27 @@
 
 .index-presentation h3 {
   margin-bottom: 1.5em;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/Banner.png");
+  height: 20em;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  font-family: "Tangerine", cursive;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hero-text h1 {
+  font-size: 4.5rem;
+  color: white;
 }/*# sourceMappingURL=index.css.map */
